# quickgithub

./: .env.example  .gitignore  CLAUDE.md  Caddyfile  IMPROVEMENTS.md  Makefile  README.md  agent_addition.md  docker-compose.yml
grafana/dashboards/: github-api.json  indexing-overview.json  llm-costs-usage.json  worker-overview.json
web/: instrumentation.ts  next.config.ts  package-lock.json  package.json
web/prisma/: schema.prisma
web/src/app/: globals.css  layout.tsx  page.tsx
web/src/components/: ExploreClient.tsx  FeaturedRepos.tsx  Footer.tsx  HeroSection.tsx  HowItWorks.tsx  IndexingBanner.tsx  IndexingProgress.tsx  Navbar.tsx  ProductPreview.tsx  RepoUrlInput.tsx
web/src/hooks/: useChat.ts  useIndexingStatus.ts
web/src/lib/: asynq.ts  auth.ts  constants.ts  rate-limit.ts  redis.ts
web/src/types/: index.ts
worker/: go.mod  go.sum
worker-py/: Dockerfile  pyproject.toml  test_sdk.py  test_sdk2.py
worker-py/worker/: agent_passes.py  api.py  cache.py  clone.py  config.py  db.py  email.py  main.py  otel.py  prompts.py  schemas.py  task_handler.py
worker-py/worker/providers/: __init__.py  base.py  claude_provider.py  openai_provider.py  openai_tools.py
worker/.next/: trace  trace-build
worker/cmd/worker/: main.go
worker/internal/api/: enqueue.go
worker/internal/cache/: redis.go
worker/internal/config/: config.go
worker/internal/db/: postgres.go
worker/internal/github/: client.go  files.go  filter.go  tree.go
worker/internal/llm/: chunker.go  client.go  openai.go  pipeline.go  prompt_strings.go  prompts.go  schemas.go
(+40 files in other folders)
